feat(TPSVC-20437): Adapt reactive module