@@ -24,11 +24,11 @@ public class TalendJwtConverter implements Converter<Jwt, Collection<GrantedAuth
     public Collection<GrantedAuthority> convert(Jwt jwt) {
         List<String> ents = Arrays.asList(((String) jwt.getClaims().getOrDefault(TALEND_ENTITLEMENTS_FIELD, "")).split(","));
         List<String> permsList = ((JSONArray) jwt.getClaims().getOrDefault(TALEND_PERMISSIONS_FIELD, new JSONArray())).stream()
-                .map(Object::toString).toList();
+                .map(Object::toString).collect(Collectors.toList());
         List<String> satPerms = ((JSONArray) jwt.getClaims().getOrDefault(TALEND_SAT_PERMISSIONS_FIELD, new JSONArray())).stream()
-                .map(Object::toString).toList();
+                .map(Object::toString).collect(Collectors.toList());
         List<String> authorities = Stream.of(permsList.stream(), ents.stream(), satPerms.stream()).flatMap(i -> i)
-                .filter(s -> !s.isEmpty()).toList();
+                .filter(s -> !s.isEmpty()).collect(Collectors.toList());
         return authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
     }
 }
